--- a/Jenkins/Jenkinsfile
+++ b/Jenkins/Jenkinsfile
@@ -10,10 +10,28 @@ pipeline {
             }
         }
 
+        stage('BUILD1.1') {
+            steps{
+                 sh '''
+                    sleep 5
+                    echo "This is a BUILD1.1 stage"
+                '''
+            }
+        }
+
+        stage('BUILD1.2') {
+            steps{
+                 sh '''
+                    sleep 5
+                    echo "This is a BUILD1.2 stage"
+                '''
+            }
+        }
+ 
         stage('TEST') {
             steps{
                 sh '''
-                    sleep 6
+                    sleep 5
                     echo "This is a TEST stage"
                 '''
             }
